KnownPatterns with noargs constructors to be able to parse it